# aimp-discord-rpc

./: .gitignore  Cargo.toml  README.md  config.example.toml  install.sh
resources/: aimp-discord-rpc.desktop
src/: config.rs  main.rs  monitor.rs  tray.rs
src/discord/: activity.rs  mod.rs
src/player/: mod.rs  mpris.rs  types.rs
