[package]
name = "aimp-discord-rpc"
version = "0.1.0"
edition = "2021"
description = "Discord Rich Presence for AIMP music player"

[dependencies]
mpris = "2"
discord-rpc-client = { version = "0.4", features = ["rich_presence"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
tray-icon = "0.24"
gtk = "0.18"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
url = "2"
ctrlc = "3"

[patch.crates-io]
discord-rpc-client = { path = "vendor/discord-rpc-client" }

[profile.release]
opt-level = 2
lto = true
strip = true
